--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ pnpm-debug.log*
 
 # environment variables
 .env
-.env.production
+.env.*
+bot/.env
+bot/venv/
 
 # macOS-specific files
 .DS_Store
